Refactored configuration funcionality to use a database table instead of yml file. This was done to simplify deployment to heroku, where the filesystem is read only.

--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -5,7 +5,7 @@
 <%= link_to "Activity Templates", activities_path %> |
 <%= link_to "Tags", tags_path %> |
 <%= link_to "Tag categories", tag_types_path %> |
-<%= link_to "Configure", configurations_path %>
+<%= link_to "Configure", edit_configuration_path %>
 </div>
 
 
