Made vacation overview available for non admin users. Fixed bug in vacation_overview erb (used previously removed Activity.vacation method).

--- a/app/views/vacations/index.html.erb
+++ b/app/views/vacations/index.html.erb
@@ -87,5 +87,5 @@
 
 	</table>
 <% else %>
- <b>No vacation activity has been configured. Select one <%= link_to "here", edit_configuration_path %></b>
+ <b>No vacation activity has been configured. Select one <%= link_to "here", edit_configuration_path %>.</b>
 <% end -%>
