--- a/app/views/vacations/vacation_overview.html.erb
+++ b/app/views/vacations/vacation_overview.html.erb
@@ -2,43 +2,49 @@
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
 
-<% activity_vacation = Activity.vacation %>
+<% activity_vacation = Configuration.instance.vacation_activity %>
 
 <h1>Vacation overview</h1>
 <%= render :partial => 'holidays/sub_menu' -%>
 
-<div class="navigation">
-	<h3 class="compact">
-		<%= link_to '<<', :action => 'vacation_overview', :year => @year - 1 %>
-		<span><%= @year %></span>
-		<%= link_to '>>', :action => 'vacation_overview', :year => @year + 1 %>
-	</h3>
-</div>
+<% if activity_vacation %>
 
-<br/>
+	<div class="navigation">
+		<h3 class="compact">
+			<%= link_to '<<', :action => 'vacation_overview', :year => @year - 1 %>
+			<span><%= @year %></span>
+			<%= link_to '>>', :action => 'vacation_overview', :year => @year + 1 %>
+		</h3>
+	</div>
 
-<table class="vacation regular" width="100%">
+	<br/>
 
-  <tr>
-    <% Date::ABBR_MONTHNAMES.each do |month_name| %>
-      <th><%= month_name -%></th>
-    <% end %>
-      <th>TOTAL</th>
-  </tr>
+	<table class="vacation regular" width="100%">
 
-    <% User.all.sort.each do |user| %>
-    <tr><td class="user"><%=  user.name %></td>
+	  <tr>
+	    <% Date::ABBR_MONTHNAMES.each do |month_name| %>
+	      <th><%= month_name -%></th>
+	    <% end %>
+	      <th>TOTAL</th>
+	  </tr>
+
+	    <% User.all.sort.each do |user| %>
+	    <tr><td class="user"><%=  user.name %></td>
       
-      <% 1.upto(12) do |month| %>
+	      <% 1.upto(12) do |month| %>
 
-        <td>
-          <% day_from = Date.civil(@year, month,1) %>
-          <% days = TimeEntry.for_user(user).for_activity(activity_vacation).between(day_from, day_from.at_end_of_month).count %>
-          <%= days > 0 ? days : '-' %>
-        </td>
-      <% end %>
-      <td><%= TimeEntry.for_user(user).for_activity(activity_vacation).between(Date.civil(@year, 1,1), Date.civil(@year + 1, 1,1) -1).count %></td>
-    </tr>
-  <% end %>
+	        <td>
+	          <% day_from = Date.civil(@year, month,1) %>
+	          <% days = TimeEntry.for_user(user).for_activity(activity_vacation).between(day_from, day_from.at_end_of_month).count %>
+	          <%= days > 0 ? days : '-' %>
+	        </td>
+	      <% end %>
+	      <td><%= TimeEntry.for_user(user).for_activity(activity_vacation).between(Date.civil(@year, 1,1), Date.civil(@year + 1, 1,1) -1).count %></td>
+	    </tr>
+	  <% end %>
 
-</table>
+	</table>
+
+<% else %>
+ <b>No vacation activity has been configured. Select one <%= link_to "here", edit_configuration_path %>.</b>
+<% end -%>
