Refactored vacations views and controller to be more restful. Moved most of the complex code for e.g. creating table headers into helper methods to clean up the vacations edit view. Did similar refactorings to various views in time_entries. Added a shared partial for displaying the flash notices and errors.

--- a/app/views/holidays/_sub_menu.html.erb
+++ b/app/views/holidays/_sub_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="sub_menu" id="nav">
-  <%= link_to "Vacation", :controller => :vacations %> |
-  <%= link_to "Vacation Overview", :controller => :vacations, :action => :vacation_overview %> |
+  <%= link_to "Vacation", edit_user_vacation_path(@current_user) %> |
+  <%= link_to "Vacation Overview", vacations_path %> |
   <%= link_to "Public Holidays", :controller => :holidays %>
 </div>
 <br/><br/>
