--- a/app/views/time_entries/_week_total.html.erb
+++ b/app/views/time_entries/_week_total.html.erb
@@ -1,5 +1,2 @@
-    Week total <b><%= TimeEntry.for_user(user).between(date, (date + 6)).sum(:hours) %></b>
-    Expected <b><%= Holiday.expected_hours_between( date, (date + 4)) %></b>
-
-
-
+Week total <b><%= user.time_entries.between(date, (date + 6)).sum(:hours) %></b>
+Expected <b><%= Holiday.expected_hours_between( date, (date + 4)) %></b>
