Small code changes, mostly for cosmetic reasons.

--- a/app/views/vacations/index.html.erb
+++ b/app/views/vacations/index.html.erb
@@ -32,11 +32,11 @@
 
 	        <td>
 	          <% day_from = Date.civil(@year, month,1) %>
-	          <% days = TimeEntry.for_user(user).for_activity(activity_vacation).between(day_from, day_from.at_end_of_month).count %>
+	          <% days = user.time_entries.for_activity(activity_vacation).between(day_from, day_from.at_end_of_month).count %>
 	          <%= days > 0 ? days : '-' %>
 	        </td>
 	      <% end %>
-	      <td><%= TimeEntry.for_user(user).for_activity(activity_vacation).between(Date.civil(@year, 1,1), Date.civil(@year + 1, 1,1) -1).count %></td>
+	      <td><%= user.time_entries.for_activity(activity_vacation).between(Date.civil(@year, 1,1), Date.civil(@year + 1, 1,1) -1).count %></td>
 	    </tr>
 	  <% end %>
 
