Index page for reports, white margins to content, and other minor changes

--- a/app/views/reports/_sub_menu.html.erb
+++ b/app/views/reports/_sub_menu.html.erb
@@ -3,5 +3,5 @@
 <%=  link_to "Search", :action => 'search' %> |
 
 <%=  link_to "Customers", :action => 'customer' %> |
-<%=  link_to "User overview", :action => 'user' %>
+<%=  link_to "Users", :action => 'user' %>
 </div>
