--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -338,8 +338,8 @@ td.week_entries_hours {
 
 #main {
 	float: left;
-	width: 100%;
-	border-bottom: 1px dotted;
+	width: 98%;
+        margin: 1%;
 }
 
 #footer {
