--- a/app/views/reports/customer.html.erb
+++ b/app/views/reports/customer.html.erb
@@ -6,7 +6,7 @@
 <p class="error"><%= flash[:error] %></p>
 <p class="notice"><%= flash[:notice] %></p>
 
-<% form_tag 'summary', :method => 'get', :id => 'hours_form' do %>
+<% form_tag 'customer', :method => 'get', :id => 'hours_form' do %>
 
     <table>
       <tr>
