Refactored VacationsController: moved business logic into suitable models (Holiday and User).

--- a/app/views/holidays/_sub_menu.html.erb
+++ b/app/views/holidays/_sub_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="sub_menu" id="nav">
-  <%= link_to "Vacation", edit_user_vacation_path(@current_user) %> |
+  <%= link_to "Edit Vacation", edit_user_vacation_path(@current_user) %> |
   <%= link_to "Vacation Overview", vacations_path %> |
   <%= link_to "Public Holidays", :controller => :holidays %>
 </div>
