--- a/app/views/vacations/edit.html.erb
+++ b/app/views/vacations/edit.html.erb
@@ -24,17 +24,17 @@
 		</tr>
 		<tr>
 			<td class="user">
-				<%=h @user.name %>
+				<%=h @current_user.name %>
 			</td>
-			<% form_tag(user_vacation_path(@user), :method => 'put', :id => 'holidays_select_form') do %>
-				<% days_of_month_for_user(@user).each do |d| %>
+			<% form_tag(user_vacation_path(@current_user), :method => 'put', :id => 'holidays_select_form') do %>
+				<% days_of_month_for_user(@current_user).each do |d| %>
 					<td>
 						<%= check_box_tag_unless_holiday_or_weekend(d) %>
 					</td>
 				<% end %>
 				<td>
 					<%= hidden_field_tag 'month', @day %>
-					<%= hidden_field_tag 'user_id', @user.id %>
+					<%= hidden_field_tag 'user_id', @current_user.id %>
 					<%= submit_tag 'Update' %>
 				</td>
 			<% end %>
