--- a/app/views/vacations/edit.html.erb
+++ b/app/views/vacations/edit.html.erb
@@ -33,7 +33,7 @@
 					</td>
 				<% end %>
 				<td>
-					<%= hidden_field_tag 'month', @day %>
+					<%= hidden_field_tag 'start_of_month', @day %>
 					<%= hidden_field_tag 'user_id', @current_user.id %>
 					<%= submit_tag 'Update' %>
 				</td>
