--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -118,7 +118,8 @@ div#week_total {
 .center {
     margin-left: auto;
     margin-right: auto;
-    width: 6em;
+    width: 20em;
+    text-align:center;
 }
 
 .activity_header {
