User report per month and linking username to month review. Grouping customer report by billable/internal. Sorting of activities in month review.

--- a/app/views/reports/_project_content.erb
+++ b/app/views/reports/_project_content.erb
@@ -6,7 +6,7 @@
   </tr>
   
   <% sum = 0 %>
-  <% project_hours.each do |user, activity, hours| %>
+  <% user_activity_hours.each do |user, activity, hours| %>
   <tr>
     <td><%= user.name %></td>
     <td><%= activity.name %></td>
