--- a/app/views/reports/customer.html.erb
+++ b/app/views/reports/customer.html.erb
@@ -6,12 +6,28 @@
 <p class="error"><%= flash[:error] %></p>
 <p class="notice"><%= flash[:notice] %></p>
 
-<div>
- <%= render :partial => 'month_year_picker', :locals => { :action => 'customer', :day => @day, :years => @years, :months => @months} %>
-</div>
-
+<% form_tag 'customer', :method => 'get', :id => "customer_form" do %>
+  <div>
+    <table>
+      <tr>
+        <td><%= select_tag "month", options_from_collection_for_select( @months, 'first', 'last', params[:month] ? params[:month].to_i : @day.month  ) %></td>
+        <td><%= select_tag "year", options_for_select(@years, params[:year].to_i) %></td>
+      <td><%= submit_tag "View" %></td>
+    </table>
+  </div>
+<% end -%>
 <br/>
 
+<h3>Billable Customers</h3>
+
 <div id="customer_content">
-  <%= render :partial => 'customer_content', :locals => { :project_hours => @project_hours} %>
+  <%= render :partial => 'customer_content', :locals => { :project_hours => @billable_project_hours} %>
+</div>
+
+
+<br><br>
+<h3>Internal</h3>
+
+<div id="internal_content">
+  <%= render :partial => 'customer_content', :locals => { :project_hours => @internal_project_hours} %>
 </div>
