--- a/app/views/reports/project.html.erb
+++ b/app/views/reports/project.html.erb
@@ -14,6 +14,6 @@
 <br/>
 
 <div id="project_content">
-  <%= render :partial => 'project_content', :locals => { :project_hours => @project_hours} %>
+  <%= render :partial => 'project_content', :locals => { :user_activity_hours => @user_activity_hours} %>
 </div>
 
