Optimized retrieval of month and year totals for Vacation. Vacation is now completely nested under user, and the index action has been replaced with show. Introduced a VacationOverview model (non-activerecord) to encapsulate logic for user and time_entry vacation data.

--- a/app/views/holidays/_sub_menu.html.erb
+++ b/app/views/holidays/_sub_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="sub_menu" id="nav">
-  <%= link_to "Edit Vacation", edit_user_vacation_path(@current_user) %> |
-  <%= link_to "Vacation Overview", vacations_path %> |
+  <%= link_to "Edit Vacation", edit_user_vacation_path(@current_user, :id => Date.today.year) %> |
+  <%= link_to "Vacation Overview", user_vacation_path(@current_user, :id => Date.today.year ) %> |
   <%= link_to "Public Holidays", :controller => :holidays %>
 </div>
 <br/><br/>
