updated code for calculating balance. Now includes current day if there are entries on that day. Also report ballance in workdays (excludes vacations) instead of days

--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -76,10 +76,7 @@
 
 
 <p>
-Balance: <span class="<%= case @period.balance when (0..9999) then "ok" when (-9999..0) then "red" end %>">
-
-  <%= "%+.1f" % @period.balance %></span> hours
-<%= ((@period.start...@period.end).include? Date.today) ? "in the first #{(Date.today.mday) -1} days" : '' %>
+Balance:  <%= balance(@period) %>
 </p>
 <p>
 Billing degree: <%= (@period.billing_degree * 100).round %> %
