--- a/app/views/reports/user.html.erb
+++ b/app/views/reports/user.html.erb
@@ -37,7 +37,7 @@
 
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to h(user.name), user_month_review_path( user, {:id => :calendar}.merge( date_to_url(Date.today) ) ) %> </td>
+        <td><%= link_to h(user.name), user_month_review_path( user, {:id => :calendar}.merge( date_to_url(@day) ) ) %> </td>
         <% @weeks.each_with_index do |date, index| %>
           <% hours = TimeEntry.for_user(user).between(date, (date + 6)).sum(:hours) %>
           <% color_code = case hours
