Review Month now remembers selected month/year when you change between calendar and listing views. Activities list in time_entry now sorts acitvities by customer.name > project.name > activity.name, and places last used activity first in list.

--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -1,4 +1,3 @@
-
 <h1>Review Month
   <%= @current_user.admin ? "for #{h @user.fullname}" : '' %>
 </h1>
@@ -35,7 +34,7 @@
     </tr>
   </table>
   <br/><br/>
-  <div style="text-align:right"><%= link_to 'View details', user_month_review_path(@user, :id => :listing) %> </div>
+  <div style="text-align:right"><%= link_to 'View details', user_month_review_path(@user, :id => :listing, :calendar => @beginning_of_month) %> </div>
 </div>
 
 <div class="calender" style="width:450px">
