--- a/app/views/month_reviews/listing.html.erb
+++ b/app/views/month_reviews/listing.html.erb
@@ -47,7 +47,7 @@
 <% end %>
     
 <br/>
-<p><%= link_to 'Back', user_month_review_path(@user, :id => :calendar) %></p>
+<p><%= link_to 'Back', user_month_review_path(@user, :id => :calendar, :calendar => @beginning_of_month) %></p>
 
 <hr/>
 Download report: <%= link_to image_tag("pdficon_small.gif", :alt => "pdf"), params.merge({ :format => "pdf", :action => "show" }) %>
